--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <html>
-<head>
-    R.P.SCHOOL
-    Srinagar, Jammu & Kashmir
-</head><br>
-<body>
-    <h1>Welcome to R.P.SCHOOL</h1>
-    <p><i>Your gateway to quality education!.</i></p>
-<p>Here studying feels more like fun rather than a chore.Our teachers are dedicated and supportive.The management is committed to providing a nurturing environment for all students.It prepares us for national exams like <b>JEE and NEET</b>.Regular mock tests are conducted to enhance our preparation.The competition is healthy and motivating.Here teaching isnt just for learning but also for applying and anlyzing what we learn.
-</p><br>
-<p>Moreover the <mark>infrastructure is well maintained and modern</mark>. The classrooms are equipped with smart boards and projectors. The library has a vast collection of books and digital resources. The sports facilities include a playground, gymnasium, and indoor games area.Teachers are encouraging and motivating.At the same time we get to play and relieve our stress.The atmosphere is peaceful and alluring.</p><br>
-<p>Overall R.P.SCHOOL is a place where we can grow academically, socially, and personally. It provides a holistic education that prepares us for the challenges of the future.<b>We are lucky to be part of this institution!.</b></p>
-</body>
+    <head>
+        <h1> Tables examples</h1>
+        </html>
+        <body>
+            
+            <table border="2px">
+                <tr>
+                    <th> item 1 </th>
+                    <th> item 2 </th>
+                    <th> item 3 </th>
+                </tr>
+<tr>
+    <td> i1 </td>
+    <td> i2 </td>
+    <td> i3 </td>
+</tr>
+<tr>
+    <td> i4 </td>
+    <td>i5 </td>
+    <td> i6 </td>
+</tr>
+            </table>
+        </body>
 </html>
