--- a/index2.html
+++ b/index2.html
@@ -1,17 +1,8 @@
 <html>
 <head>
-    </head>
-    <body> 
-    welcome to codingal...lets get started with coding<br>
-<b>welcome to codingal...lets get started with coding </b><br>    <!--thos line bolds-->
-<strong>welcome to codingal...</strong><br>
-<i>welcome to codingal...</i><br>        <!--this line italicizes-->
-<mark>Let's get started with coding</mark><br>
-<small>Let's get started with coding</small><br>
-<del>lets get started with coding</del> <br>  <!--this line strikes through-->
-<sup>lets get started with coding</sup><br>   <!--this line raises the text-->
-<sub>lets get started with coding</sub>    
-
-
+    <title> LINKS</title>
+</head>
+<body>
+    <a href="https://www.google.com">Google</a>
 </body>
 </html>
