--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,40 @@
 <html>
-<head>
-    <title> LINKS</title>
-</head>
-<body>
-    <a href="https://www.google.com">Google</a>
+    <head>
+    HORSE RIDING 
+    </head><br>
+    <body>
+        <h1>HORSE RIDING,the gateway to freedom</h1>
+        <p><i><b>Experience the thrill of horse riding!.</b></i></p>
+        <p>Horse riding is an exhilarating activity that allows individuals to connect with nature and experience a sense of freedom. It involves riding and controlling a horse, which requires skill, balance, and communication between the rider and the horse. Horse riding can be done for leisure, sport, or therapy. It offers numerous physical and mental benefits, including improved balance, coordination, and strength. Additionally, horse riding can help reduce stress and anxiety, boost confidence, and enhance overall well-being. Whether it's a leisurely trail ride or competitive equestrian sports like show jumping or dressage, horse riding provides a unique and rewarding experience for enthusiasts of all ages.</p><br>
+        <p>Moreover, I my horse riding journey has been filled with countless memories and experiences that have shaped who I am today.I started equestrian training at a young age, and it has been a transformative experience that has taught me discipline, patience, and respect for these magnificent animals.</p><br>
+        <p><i><mark><strong> I loved horse riding so much that I was left with no option but to buy a horse!</strong></mark></i></p><br>
+    <p> now lets talk about how i get ready for riding:</p><br>
+    <ul type="square">     <!-- List of preparation steps -->
+        <li>First, I make sure to wear appropriate riding attire, including a helmet, riding boots, and comfortable clothing.</li>
+        <li>Next, I groom my horse to ensure it is clean and comfortable for the ride.</li>
+        <li>Then, I saddle up my horse, making sure the saddle and bridle are properly fitted.</li>
+        <li>Before mounting, I check the surroundings to ensure a safe riding environment.</li>
+        <li>Finally, I mount the horse and begin my ride, maintaining proper posture and control throughout.</li>
+        </ul><br>
+    <dt>Overall, horse riding has been a transformative journey that has enriched my life in countless ways. It has taught me valuable life skills, provided me with unforgettable experiences, and fostered a deep connection with these magnificent animals. I am grateful for the opportunity to be part of the equestrian world and look forward to many more adventures on horseback.</dt>
+   
+   
+    <table border="5px">   <!-- Table of horse riding benefits -->
+        <tr>
+            <th>Horse Riding Benefits</th>
+            <th>Details</th>
+        </tr>
+        <tr>
+            <td>Physical Fitness</td>
+            <td>Improves balance, coordination, and strength.</td>
+        </tr>
+        <tr>
+            <td>Mental Well-being</td>
+            <td>Reduces stress and boosts confidence.</td>
+        </tr>
+        <tr>
+            <td>Connection with Nature</td>
+            <td>Provides a unique experience of freedom and adventure.</td>
+        </tr>
 </body>
 </html>
